<?xml version="1.0"?>
<package format="2">
  <name>uwb_relativ_localization_msgs</name>
  <version>0.0.0</version>
  <description>The uwb_relativ_localization_msgs package</description>

  <maintainer email="xiayuchen66@gmail.com">Yuchen Xia</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

</package>
